fixed auto layout problem with ticker

--- a/client/src/scss/ticker.scss
+++ b/client/src/scss/ticker.scss
@@ -16,7 +16,7 @@
 .ticker-item {
   background-color: #fff;
   border-radius: 2.5px;
-  padding: 10px 15px;
+  padding: 10px 0px;
   margin: 1px;
 }
 
@@ -27,12 +27,4 @@
 
 p {
   font-size: 16px;
-}
-
-p:hover {
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: none;
 }
